fix scrolling on mobile

--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ margin: 0;
 
 .newsfeed{
   display: block;
-  width: 40%;
+  width: 40% !important;
   height: 90%;
   float: right;
   overflow-y: scroll;
@@ -57,6 +57,10 @@ margin: 0;
 .newscard img{
   width: 30vw;
   height: 12vw;
+}
+
+#mySidenav{
+  display:block;
 }
 
 
